kubernetes/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-rating
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: movie-rating
  template:
    metadata:
      labels:
        app: movie-rating
    spec:
      serviceAccountName: movie-rating-sa
      # Add cache purge as init container
      containers:
      - name: movie-rating
        image: docker.io/arthurvb/movie-rating:v1.0.36 # {"$imagepolicy": "default:movie-rating-policy"}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
