kubernetes/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: test
spec:
  selector:
    app: movie-rating
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP  # Changed from NodePort to ClusterIP for internal access only
