kubernetes/app/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
