kubernetes/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: movierating.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish-service
            port:
              number: 8080
